# working-for-codex

./: .gitignore  7-DAY-CLONE-SCHEDULES.md  AGENTS.md  Agent.md  Agents.md  ENV_SETUP.md  PORTFOLIO.md  PORTFOLIO_SUMMARY.md  ROOT_ROADMAP.md  SCHEDULE-5DAYS.md  SCHEDULE-7DAYS.md
.archive/cpp-pvp-server/server/: CMakeLists.txt  vcpkg.json
.archive/cpp-pvp-server/server/src/anticheat/: replay_recorder.cpp
.archive/cpp-pvp-server/server/src/distributed/: service_discovery.cpp
.archive/cpp-pvp-server/server/src/game/: combat.cpp  projectile.cpp
.archive/cpp-pvp-server/server/src/matchmaking/: matchmaker.cpp
.archive/cpp-pvp-server/server/src/netcode/: input_buffer.cpp  lag_compensation.cpp
.notuse/: a.md  (+3 more)
cpp-pvp-server/server/src/: CMakeLists.txt  main.cpp
cpp-pvp-server/server/src/anticheat/: anomaly_detector.cpp  ban_service.cpp  hit_validator.cpp  movement_validator.cpp
cpp-pvp-server/server/src/core/: config.cpp  game_loop.cpp
cpp-pvp-server/server/src/distributed/: consistent_hash.cpp  load_balancer.cpp
cpp-pvp-server/server/src/game/: combat.cpp  game_session.cpp  projectile.cpp
cpp-pvp-server/server/src/matchmaking/: match.cpp  match_queue.cpp  matchmaker.cpp
cpp-pvp-server/server/src/netcode/: client_prediction.cpp  reconciliation.cpp
cpp-pvp-server/server/src/network/: metrics_http_server.cpp  packet_simulator.cpp  packet_types.cpp  profile_http_router.cpp  snapshot_manager.cpp  udp_game_server.cpp  udp_metrics.cpp  udp_socket.cpp  websocket_server.cpp
cpp-pvp-server/server/src/stats/: match_stats.cpp  player_profile_service.cpp
cpp-pvp-server/server/src/storage/: in_memory_session_store.cpp  redis_session_store.cpp  session_store.cpp
cpp-pvp-server/server/tests/: CMakeLists.txt
cpp-pvp-server/server/tests/integration/: CMakeLists.txt  test_profile_http.cpp  test_websocket_combat.cpp  test_websocket_server.cpp
cpp-pvp-server/server/tests/performance/: CMakeLists.txt  test_matchmaking_perf.cpp  test_profile_service_perf.cpp  test_projectile_perf.cpp  test_tick_variance.cpp  udp_load_test.cpp
cpp-pvp-server/server/tests/unit/: CMakeLists.txt  test_ban_service.cpp  test_config.cpp  test_game_loop.cpp  test_game_session.cpp  test_movement_validator.cpp  test_snapshot_manager.cpp
cpp-pvp-server/snapshots/001_bootstrap/server/: CMakeLists.txt  vcpkg.json
raw-http-server/: .gitignore  README.md  build.sh  pyproject.toml  run_sample.sh  start_server.sh  test_all.sh
raw-http-server/design/: 0.0-initial-design.md  1.4.5-spring-bridge.md  ci.md  v1.0.0-http-server.md  v1.1.0-mini-framework.md  v1.2.0-connection-pool.md  v1.3.0-integration.md
raw-http-server/docs/: framework-guide.md  learning-journal.md  phase1-summary.md
raw-http-server/docs/evidence/m1.1/: code-walkthrough.md  http-parsing-example.txt  performance-metrics.txt  validation-report.md
raw-http-server/docs/evidence/m1.2/: framework-comparison.md  validation-report.md
raw-http-server/docs/evidence/m1.3/: isolation-tests.md  performance-comparison.md  validation-report.md
raw-http-server/docs/evidence/m1.4/: demo-script.sh  integration-report.md  sample-app-walkthrough.md
raw-http-server/docs/evidence/m1.4.5/: performance-comparison.md  validation-report.md
raw-http-server/src/milestone-1.1/: __init__.py  http_parser.py  http_server.py  main.py  router.py
raw-http-server/src/milestone-1.2/: __init__.py  main.py
raw-http-server/src/milestone-1.2/example/: __init__.py  controllers.py  database.py  middleware.py
raw-http-server/src/milestone-1.2/framework/: __init__.py  app.py  container.py  decorators.py  request.py  response.py
raw-http-server/src/milestone-1.3/: main.py
raw-http-server/src/milestone-1.3/pool/: __init__.py  config.py  connection_pool.py  leak_detector.py  pooled_connection.py
raw-http-server/src/milestone-1.3/tests/: __init__.py  test_exhaustion.py  test_isolation.py  test_leak.py
raw-http-server/src/milestone-1.4/: __init__.py  _compat.py  application.py  controllers.py  database.py  main.py  middleware.py  smoke_tests.py
raw-http-server/src/milestone-1.4.5/: MAPPING.md  README.md  pom.xml
ray-tracer/: .gitignore  CLONE-GUIDE.md  CMakeLists.txt  README.md
ray-tracer/.github/workflows/: ci.yml
ray-tracer/design/: 0.0-initial-design.md  v1.0.0-basic-raytracer.md  v2.0.0-advanced-features.md  v3.0.0-monte-carlo-integration.md
ray-tracer/snapshots/: INDEX.md
ray-tracer/snapshots/001_cmake_setup/: CMakeLists.txt  SNAPSHOT-NOTES.md
ray-tracer/snapshots/001_cmake_setup/src/: main.cpp
ray-tracer/snapshots/002_vec3_ray/: CMakeLists.txt  SNAPSHOT-NOTES.md
ray-tracer/snapshots/002_vec3_ray/src/: main.cpp
ray-tracer/snapshots/003_sphere_hittable/: SNAPSHOT-NOTES.md
ray-tracer/snapshots/004_camera_basic/: SNAPSHOT-NOTES.md
ray-tracer/snapshots/005_materials_basic/: SNAPSHOT-NOTES.md
ray-tracer/snapshots/006_antialiasing/: CMakeLists.txt  SNAPSHOT-NOTES.md
ray-tracer/snapshots/006_antialiasing/src/: main.cpp
ray-tracer/snapshots/007_aabb_bvh/: SNAPSHOT-NOTES.md
ray-tracer/snapshots/008_textures/: SNAPSHOT-NOTES.md
ray-tracer/snapshots/009_quad_motion/: SNAPSHOT-NOTES.md
ray-tracer/snapshots/010_volume/: CMakeLists.txt  SNAPSHOT-NOTES.md
ray-tracer/snapshots/011_pdf_basic/: SNAPSHOT-NOTES.md
ray-tracer/snapshots/012_pdf_hittable/: SNAPSHOT-NOTES.md
ray-tracer/snapshots/013_diffuse_light/: SNAPSHOT-NOTES.md
ray-tracer/src/: main.cpp
ray-tracer/src/core/: camera.h  ray.h  vec3.h
ray-tracer/src/geometry/: aabb.h  bvh_node.h  constant_medium.h  hittable.h  hittable_list.h  moving_sphere.h  quad.h  rotate_y.h  sphere.h  translate.h
ray-tracer/src/materials/: dielectric.h  diffuse_light.h  isotropic.h  lambertian.h  material.h  metal.h
ray-tracer/src/textures/: checker_texture.h  image_texture.h  noise_texture.h  perlin.h  solid_color.h  texture.h
ray-tracer/src/utils/: onb.h  pdf.h
ray-tracer/tests/benchmark/: benchmark_bvh.cpp
ray-tracer/tests/unit/: test_bvh.cpp  test_geometry.cpp  test_materials.cpp  test_onb.cpp  test_pdf.cpp  test_ray.cpp  test_sphere.cpp  test_textures.cpp  test_vec3.cpp
(+892 files in other folders)
