add_library(pvpserver_lib
    core/config.cpp
    core/game_loop.cpp
    distributed/consistent_hash.cpp
    distributed/load_balancer.cpp
    distributed/service_discovery.cpp
    game/combat.cpp
    game/game_session.cpp
    game/projectile.cpp
    matchmaking/match.cpp
    matchmaking/match_notification_channel.cpp
    matchmaking/match_queue.cpp
    matchmaking/match_request.cpp
    matchmaking/matchmaker.cpp
    netcode/client_prediction.cpp
    netcode/input_buffer.cpp
    netcode/lag_compensation.cpp
    netcode/reconciliation.cpp
    network/metrics_http_server.cpp
    network/packet_simulator.cpp
    network/packet_types.cpp
    network/snapshot_manager.cpp
    network/udp_game_server.cpp
    network/udp_metrics.cpp
    network/udp_socket.cpp
    network/websocket_server.cpp
    stats/leaderboard_store.cpp
    stats/match_stats.cpp
    stats/player_profile_service.cpp
    storage/postgres_storage.cpp
)

target_link_libraries(pvpserver_lib
    PUBLIC
        Boost::system
        libpq::pq
)

add_executable(pvpserver
    main.cpp
)

target_link_libraries(pvpserver
    PRIVATE
        pvpserver_lib
        Boost::system
        libpq::pq
)
